<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reading Helper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_book_detail">Book Detail</string>
    <string name="title_section1_Overview">Overview</string>
    <string name="title_section2_Notes">Recent Notes</string>
    <string name="title_section3_Time_Charts">Time Charts</string>
    <string name="Time_spent_reading">Time spent reading</string>
    <string name="Time_today">Today: </string>
    <string name="Time_week">This week: </string>
    <string name="Time_month">This month: </string>
    <string name="Time_total">Total time: </string>


</resources>
