<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.brad.readinghelper.BookDetail$PlaceholderFragment">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/pngbook_cover"
        android:maxHeight="96dp"
        android:maxWidth="96dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Time_spent_reading"
        android:id="@+id/time_header_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="64dp"
        android:textSize="18sp" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/time_header_text"
        android:layout_alignLeft="@+id/time_header_text"
        android:layout_alignStart="@+id/time_header_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Time_today"
        android:id="@+id/time_today_text"
        android:layout_below="@+id/time_header_text"
        android:layout_alignLeft="@+id/time_header_text"
        android:layout_alignStart="@+id/time_header_text"
        android:paddingTop="8dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Time_week"
        android:id="@+id/time_week_text"
        android:layout_below="@+id/time_today_text"
        android:layout_alignLeft="@+id/time_today_text"
        android:layout_alignStart="@+id/time_today_text"
        android:paddingTop="8dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Time_month"
        android:id="@+id/time_month_text"
        android:layout_below="@+id/time_week_text"
        android:layout_alignLeft="@+id/time_week_text"
        android:layout_alignStart="@+id/time_week_text"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="16sp" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_alignLeft="@+id/time_month_text"
        android:layout_alignStart="@+id/time_month_text"
        android:layout_below="@+id/time_month_text"
        android:layout_alignRight="@+id/time_header_text"
        android:layout_alignEnd="@+id/time_header_text"
        android:paddingTop="8dp"
        android:id="@+id/view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Time_total"
        android:id="@+id/time_total_text"
        android:layout_below="@+id/view"
        android:layout_alignLeft="@+id/view"
        android:layout_alignStart="@+id/view"
        android:paddingTop="8dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_section2_Notes"
        android:id="@+id/"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:orientation="vertical" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

</RelativeLayout>
